<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/amount"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_card_number"
            android:inputType="numberSigned" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/monthEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_card_month"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/yearEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/hint_card_year"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/cvcEditText"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/hint_card_cvc"
                android:inputType="numberSigned" />

        </LinearLayout>

        <EditText
            android:id="@+id/ownerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_card_owner" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/payButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pay"
                android:text="@string/pay" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
